--- a/src/main/webapp/resources/common/css/layout.css
+++ b/src/main/webapp/resources/common/css/layout.css
@@ -9,13 +9,11 @@ body {font-family:"Nanum Gothic", sans-serif !important;background:#ebe9e4;}
 .ui-datepicker-year{height:21px;}
 
 .ui-datepicker-trigger{
-    margin: 0 2px;
-	position:absolute;
-	right:0;
-	top:0;
+    margin: 2px 8px;
 	display:inline-block;
-    width: 22px;
-    height: 22px;
+    width: 24px;
+    height: 24px;
+    cursor:pointer;
 }
 
 .setting{border: 1px solid #c1c8d6;
@@ -35,7 +33,17 @@ body {font-family:"Nanum Gothic", sans-serif !important;background:#ebe9e4;}
 .btn_btm1{    clear: both;
     position: relative;
     margin: 10px 0;}
-    
+
+/*timepicker*/
+.ic_time{
+	display:inline-block;
+	margin: 2px 4px;
+	width: 24px;
+	height: 24px;
+	background:url(../../images/ic_time.png) no-repeat;
+	text-indent:-9999px;
+	cursor:pointer;
+} 
 
 /*공통 팝업*/
 .common_popup{display:none;position: absolute;left: 50%;top: 50%;margin: -394px 0 0 -500px;z-index:9999;}
