--- a/src/main/webapp/resources/common/css/layout.css
+++ b/src/main/webapp/resources/common/css/layout.css
@@ -3,7 +3,7 @@
 /* common */
 body {font-family:"Nanum Gothic", sans-serif !important;background:#ebe9e4;}
 .btn_area{text-align: center;padding-bottom:20px;}
-.btn_style{cursor:pointer; background: #8c8482;color: #fff;padding: 0 20px;height: 37px;line-height: 37px;font-size: 1.154em;font-weight: bold;}
+.btn_style{display:inline-block;border:none;cursor:pointer; background: #8c8482;color: #fff !important;padding: 0 20px;height: 37px;line-height: 37px;font-size: 1.154em;font-weight: bold;}
 .btn_style.type2{background:#fff;color:#000;}
 .btn_style.small{height: 30px;margin-top: 10px;line-height: 30px;}
 .check_area{text-align:center !important;}
@@ -14,6 +14,24 @@ body {font-family:"Nanum Gothic", sans-serif !important;background:#ebe9e4;}
     font-size: 0;
     text-indent: -3000px;
 }
+.btn_check{display:block;height: 30px;line-height: 30px;padding: 0 10px !important;
+    font-family:"Nanum Gothic", sans-serif;
+    font-weight:normal;
+    color: #fff !important;
+    background: #8c8482;
+ }
+.btn_delete{display: inline-block;padding: 5px 10px;height: 30px;border: 1px solid #ccc;background: #ed5567;font-weight:bold; border-radius:5px;color: #fff;cursor:pointer;}
+
+/*중복체크 레이어팝업*/
+.check_alert{display:none;position:absolute;left:50%;top:50%;width:300px;height:180px;margin:-90px 0 0 -150px;background: #ebe9e4;border:1px solid #ccc;}
+.check_alert .check_alert_inner{position:relative;padding:10px;text-align: center;}
+.check_alert .alert_tit{height: 30px;border-bottom: 1px solid #ccc;padding: 10px 0 0 10px;background: #6e6867;color:#fff;}
+.check_alert .alert_tit strong{font-size: 14px;font-weight: bold;color: #fff;}
+.check_alert .alert_con{padding-top:25px;}
+.check_alert .alert_con p{font-size: 14px;font-weight: bold;color: #333;}
+.check_alert .alert_con .btn_alert_confirm{padding: 0 20px;background: #8c8482;margin-top: 30px;color: #fff;cursor:pointer;}
+.check_alert.fail{display:block;}
+.check_alert.success{display:block;}
 
 /*달력 style*/
 .calender{position:relative;}
@@ -59,6 +77,7 @@ body {font-family:"Nanum Gothic", sans-serif !important;background:#ebe9e4;}
 
 /*공통 팝업*/
 .common_popup{display:none;position: absolute;left: 50%;top: 50%;width:400px;height:380px;margin: -190px 0 0 -200px;z-index:9999;background:#ebe9e4;}
+.common_popup.pop_depth{}
 .pop_contents{padding: 15px;margin-bottom: 10px;}
 /* 팝업 레이어 */
 .pop_layer{display:none;position:absolute;top:0;left:0;width:100%;height:100%;background:#000;opacity:0.5;z-index:999;}
@@ -490,7 +509,7 @@ span.btn_ty8 input {height:31px; line-height:31px; padding:0 20px; border:1px so
 /* 주소 */
 .pop_wrap .telerik_post {}
 .pop_wrap .telerik_post .post_tit {display:inline-block; line-height:28px;}
-.pop_wrap .telerik_post .post_num {display:inline-block;}
+.pop_wrap .telerik_post .post_num {position:relative;display:inline-block;}
 .pop_wrap .telerik_post .post_add {display:block; margin-top:5px;}
 /* 파일첨부 */
 .pop_wrap .telerik_bx .RadAsyncUpload {width:100% !important;}
