--- a/src/main/webapp/resources/common/css/layout.css
+++ b/src/main/webapp/resources/common/css/layout.css
@@ -22,6 +22,20 @@ body {font-family:"Nanum Gothic", sans-serif !important;background:#ebe9e4;}
  }
 .btn_delete{display: inline-block;padding: 5px 10px;height: 30px;border: 1px solid #ccc;background: #ed5567;font-weight:bold; border-radius:5px;color: #fff;cursor:pointer;}
 
+/*버튼팝업*/
+.btn_popup_type1{
+	display:block;
+	height: 37px;
+    line-height: 37px;
+    padding: 0 20px;
+    border: 1px solid #333333;
+    font-size: 1.154em;
+    font-weight: bold;
+    color: #FFF !important;
+    background: #548e51;
+    cursor: pointer;
+}
+
 /*중복체크 레이어팝업*/
 .check_alert{display:none;position:absolute;left:50%;top:50%;width:300px;height:180px;margin:-90px 0 0 -150px;background: #ebe9e4;border:1px solid #ccc;}
 .check_alert .check_alert_inner{position:relative;padding:10px;text-align: center;}
