--- a/src/main/webapp/resources/common/css/layout.css
+++ b/src/main/webapp/resources/common/css/layout.css
@@ -1,11 +1,14 @@
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 
 /* common */
+input:read-only{background:#dad4c4;}
+.ta_c{text-align:center;}
+
 body {font-family:"Nanum Gothic", sans-serif !important;background:#ebe9e4;}
 .btn_area{text-align: center;padding-bottom:20px;}
 .btn_style{display:inline-block;border:none;cursor:pointer; background: #8c8482;color: #fff !important;padding: 0 20px;height: 37px;line-height: 37px;font-size: 1.154em;font-weight: bold;}
 .btn_style.type2{background:#fff;color:#000;}
-.btn_style.small{height: 30px;margin-top: 10px;line-height: 30px; margin-left:150px;}
+.btn_style.small{height: 30px;margin-top: 10px;line-height: 30px;}
 .check_area{text-align:center !important;}
 
 /*search_icon*/
@@ -91,7 +94,13 @@ body {font-family:"Nanum Gothic", sans-serif !important;background:#ebe9e4;}
 
 /*공통 팝업*/
 .common_popup{display:none;position: absolute;left: 50%;top: 50%;width:400px;height:380px;margin: -190px 0 0 -200px;z-index:9999;background:#ebe9e4;}
+.common_popup.type2{height:240px;margin:-120px 0 0 -200px;}
+.common_popup.type3{width:980px;height: 608px;margin:-304px 0 0 -490px;border:1px solid #000;}
 .common_popup.pop_depth{}
+.common_popup .pop_head{position:relative;padding: 0 20px;color: #FFF;background: #544e4c;}
+.common_popup .pop_head .tit{padding: 14px 0 14px 10px;font-size: 1.154em;font-weight: bold;background: url(../../images/pop_tit_ic.png) no-repeat 0 16px;}
+.common_popup .pop_head .this_pop_close{position:absolute;right:15px;top:15px;width: 16px;height:15px;background: url(../../images/pop_btn_close.png) no-repeat 0 0;text-indent:-9999px;}
+
 .pop_contents{padding: 15px;margin-bottom: 10px;}
 /* 팝업 레이어 */
 .pop_layer{display:none;position:absolute;top:0;left:0;width:100%;height:100%;background:#000;opacity:0.5;z-index:999;}
@@ -306,7 +315,7 @@ body {font-family:"Nanum Gothic", sans-serif !important;background:#ebe9e4;}
 .tab2_con {display:none;}
 /* 본문 제목 */
 .tit_bdy1 {padding-left:28px; font-size:2.000em; font-weight:bold; color:#333; background:url("../../images/tit_bdy_ic_01.gif") no-repeat 0 4px; margin:-4px 0 13px;}
-.tit_bdy2 {padding-left:24px; font-size:1.400em; font-weight:bold; color:#333; background:url("../../images/tit_sub_ic_01.gif") no-repeat 0 4px;  margin:-4px 0 13px;}
+.tit_bdy2 {padding-left:24px; font-size:1.400em; font-weight:bold; color:#333; background:url("../../images/tit_sub_ic_01.png") no-repeat 0 4px;  margin:-4px 0 13px;}
 .tit_bdy3 {font-size:1.800em; font-weight:bold; color:#333; margin: 20px 10px 10px 0;}
 /* 본문 상단 검색 박스 */
 .search_box {clear:both; position:relative; padding:20px; margin-bottom:30px;border:1px solid #dedcd7; background:#faf9f5; *zoom:1;}
@@ -572,6 +581,7 @@ table.rwTable tbody tr.rwTitleRow td.rwTitlebar {background:#FFF; border-bottom:
 .RadUpload ul.ruInputs  {}
 .RadUpload ul.ruInputs li {}
 .RadUpload ul.ruInputs li span.ruFileWrap {height:auto; width:89%;}
+.RadUpload ul.ruInputs li span.ruFileWrap.mr{margin-right:-95px;}
 .RadUpload ul.ruInputs li span.ruFileWrap input.ruFakeInput {width:75% !important; height:28px; border:1px solid #d5d9e0;}
 .RadUpload ul.ruInputs li span.ruFileWrap input.ruButton {height:30px; font-weight:bold; color:#FFF;  background:#8c8482}
 .RadUpload ul.ruInputs li span.ruFileWrap input.ruFileInput {border:1px solid red !important; }
@@ -682,7 +692,7 @@ div.RadEditor table.reLayoutWrapper td.reContentCell iframe body {}
 /* sub_tab */
 .telerik_tab.teleik_tab_inner {margin-bottom:20px;}
 .telerik_tab.teleik_tab_inner ul.rtsUL {margin-left:0;}
-.teleik_tab_inner_con {position:relative; padding:0 20px;height:322px;}
+.teleik_tab_inner_con {padding:0 20px;}
 .brd_list2 .telerik_radio  td {height:26px; line-height:1.2; border-bottom:none !important; vertical-align:middle !important; background-color:transparent !important;}
 .brd_list2 .col_ct .telerik_radio {margin:0 auto;}
 .article_ty1 {clear:both; margin-bottom:30px;}
