login css수정(input,intro1)

--- a/src/main/webapp/resources/common/css/Input.css
+++ b/src/main/webapp/resources/common/css/Input.css
@@ -206,7 +206,7 @@ html body .riSingle .riTextBox {
 	margin: 0px; width: 100%; padding-right: 5px; padding-left: 5px;
 }
 html body .riSingle [type='text'].riTextBox {
-	margin: 0px; width: 100%; padding-right: 5px; padding-left: 5px;
+	margin: 0px; width: 100%; padding-right: 5px; padding-left: 5px;outline:none;
 }
 .rfdTextbox.RadForm .riSingle input.rfdDecorated {
 	padding-right: 5px; padding-left: 5px;
