출퇴근 기록,출퇴근 개인설정,출퇴근 시간설정 등록

--- a/src/main/webapp/resources/common/css/layout.css
+++ b/src/main/webapp/resources/common/css/layout.css
@@ -96,6 +96,7 @@ body {font-family:"Nanum Gothic", sans-serif !important;background:#ebe9e4;}
 .common_popup{display:none;position: absolute;left: 50%;top: 50%;width:400px;height:380px;margin: -190px 0 0 -200px;z-index:9999;background:#ebe9e4;}
 .common_popup.type2{height:240px;margin:-120px 0 0 -200px;}
 .common_popup.type3{width:980px;height: 608px;margin:-304px 0 0 -490px;border:1px solid #000;}
+.common_popup.type4{width: 650px; height:598px; margin: -240px 0 0 -315px;}
 .common_popup.pop_depth{}
 .common_popup .pop_head{position:relative;padding: 0 20px;color: #FFF;background: #544e4c;}
 .common_popup .pop_head .tit{padding: 14px 0 14px 10px;font-size: 1.154em;font-weight: bold;background: url(../../images/pop_tit_ic.png) no-repeat 0 16px;}
